Bug 138181 - FILEOPEN XLSX Hidden pie chart legend entry visible
Summary: FILEOPEN XLSX Hidden pie chart legend entry visible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-11-13 10:06 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (13.13 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-11-13 10:06 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (130.18 KB, image/png)
2020-11-13 10:07 UTC, NISZ LibreOffice Team
Details
Example saved in MSO as XLS (29.50 KB, application/vnd.ms-excel)
2020-11-13 12:41 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-11-13 10:06:56 UTC
Created attachment 167263 [details]
Example file from Excel

Attached simple pie chart has one of its legend entries hidden in Excel, but all of them are visible in Calc.

Steps to reproduce:
    1. Open attached file

Actual results:
Second legend entry is visible.

Expected results:
Second legend entry should not be visible.

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: f7e6c9853decbb61dc9aaa5ed3a3aa33d529d6e2
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-11-13 10:07:14 UTC
Created attachment 167264 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 Timur 2020-11-13 12:33:13 UTC
Repro 7.1+. There were changes to worse ("Column A" shown in 6.0 and 6.4), but this was never OK, so Inherited ("1 2 3" in OO and 4.0).
Comment 3 Timur 2020-11-13 12:41:44 UTC
Created attachment 167271 [details]
Example saved in MSO as XLS

Also XLS is not fine. Let's keep here so far, probably it will take new bug.
Comment 4 Commit Notification 2020-11-24 09:34:56 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3be5e428d669accd841949662d601a6f6e1cdb3f

tdf#138181 Chart OOXML: fix deleted legend entries of pie charts

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-11-24 13:59:47 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/3e8cdf07e8c987ebf43a1271ae26ac38f13c7e33

tdf#138181 Chart OOXML: fix deleted legend entries of pie charts

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2020-12-31 11:18:07 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!