tdf#138181 Chart OOXML: fix deleted legend entries of pie charts

The legend of the pie chart showed deleted legend entries too
when VaryColorsByPoint was false.

Change-Id: I6fc978af0db6e2d39d7f451e765d7ef81c73a05c